Fixed navbar on mobile

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -110,7 +110,7 @@ a.button:hover {
 @media only screen and (max-width: 800px) {
   .navbar {
     padding: 20px 20px;
-    background-color: white
+    background-color: #333
   }
 }
 
